[package]
name = "pong"
version = "0.1.0"
authors = ["Nikolay Kostyurin <jilizart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dependencies.amethyst]
version = "0.15"
features = ["metal"]

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
